--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,5 +1,10 @@
 {
   "compilerOptions": {
-    "baseUrl": "src"
+    "baseUrl": "src",
+    "plugins": [
+      {
+        "name": "javascript-styled-plugin"
+      }
+    ]
   }
 }
